<resources>
    <string name="app_name">MobLab</string>
    <string name="caption_text">Please login to use our services</string>
    <string name="txt_mobile_number">MOBILE NUMBER</string>
    <string name="txt_pass">PASSWORD</string>
    <string name="create_account">create an account</string>
    <string name="txt_name">Full Name</string>
    <string name="txt_house_name">House Name</string>
    <string name="txt_dob">Date of Birth</string>
    <string name="caption_txt">We need some basic informaton from you</string>
    <string name="txt_place">PLACE</string>
    <string name="txt_pincode">PINCODE</string>
    <string name="txt_comm_caption">Tell us how can we contact you, also set your secure password.</string>
    <string name="txt_mob">MOBILE NUMBER</string>
    <string name="txt_mail">EMAIL ADDRESS</string>
    <string name="txt_register">REGISTER</string>
    <string name="txt_next">NEXT</string>
    <string name="txt_already_memb">Already a member ?</string>
    <string name="txt_verify">VERIFY YOUR NUMBER</string>
    <string name="txt_otp">OTP</string>
    <string name="verify">VERIFY</string>
    <string name="txt_logout">LOGOUT</string>
    <string name="txt_location">We would like to know to your location for delivering best services</string>
    <string name="btn_book_tests">BOOK TESTS</string>
    <string name="txt_user_name">USER NAME</string>
    <string name="txt_dob_caps">DATE OF BIRTH</string>
    <string name="txt_mydob">1998-10-28</string>
    <string name="txt_caption_booktr">Please fill the details for booking a test request with us.</string>
    <string name="book_test_request">BOOK TEST REQUEST</string>
    <string name="txt_doctor">DOCTOR</string>
    <string name="txt_tr">REQUEST TEST</string>
    <string name="TXT_SUCCESS">TEST REQUESTED SUCCESSFULLY</string>
    <string name="final_submit">FINAL SUBMIT</string>
    <string name="add_tests">ADD TESTS</string>
    <string name="submit_request">SUBMIT request</string>
    <string name="txt_upload_caption">Please select test prescription to upload</string>
    <string name="txt_division">= = = = = OR = = = = =</string>
    <string name="txt_select_image">SELECT IMAGE</string>
    <string name="txt_upload_image">UPLOAD IMAGE</string>
    <string name="txt_seltest_caption">Please select the test you want to do</string>
    <string name="txt_specimen">SPECIMEN :</string>
    <string name="txt_test">TEST :</string>
    <string name="txt_submit_test">SUBMIT TEST</string>
    <string name="test_name">Test Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txt_welcome">WELCOME</string>
    <string name="txt_complete_profile">complete profile</string>
    <string name="test_requests">TEST REQUESTS</string>
    <string name="book_test_txt">You can make request \nfor a test here</string>
    <string name="view_prev_tr">You can view previous \ntest requests</string>
    <string name="txt_view">VIEW</string>
    <string name="txt_tests">TESTS</string>
    <string name="view_tests_caption">you can view the tests \nwe provide</string>
    <string name="add_test">add test</string>
    <string name="submit">submit</string>
</resources>