<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTestsActivity">

    <TextView
        android:id="@+id/txt_upload_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/txt_upload_caption"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/btn_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_select_image"
        android:background="@drawable/button_shape"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/txt_upload_caption"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_upload_image"
        android:background="@drawable/button_shape"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_select"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <TextView
        android:id="@+id/txt_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_division"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/txt_seltest_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_or"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/txt_seltest_caption"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <TextView
        android:id="@+id/txt_selTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_seltest_caption"
        android:text="@string/txt_test"
        android:layout_margin="30dp"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/et_user_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/txt_selTest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/test_name"/>

    <Button
        android:id="@+id/btn_submitTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_submit_test"
        android:background="@drawable/button_shape"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/et_user_test"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="18dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>
    

</androidx.constraintlayout.widget.ConstraintLayout>