<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookRequestActivity">

    <TextView
        android:id="@+id/caption_booktr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/txt_caption_booktr"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="23sp"/>

    <TableLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caption_booktr"
        android:id="@+id/req_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">


        <TableRow
            android:layout_margin="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_user_name"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="23sp"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_user_name"
                android:textColor="@android:color/black"
                android:textSize="23sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"/>

        </TableRow>

        <TableRow
            android:layout_margin="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_dob_caps"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="23sp"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/tv_userdob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_mydob"
                android:textColor="@android:color/black"
                android:textSize="23sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"/>

        </TableRow>

        <TableRow
            android:layout_margin="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_doctor"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="23sp"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/et_userdoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="23sp"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"/>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_addtr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_tr"
        android:background="@drawable/button_shape"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/req_table"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="200dp"/>

    <TextView
        android:id="@+id/txt_tr_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_addtr"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="22.5sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_addtests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_tests"
        android:background="@drawable/button_shape"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/txt_tr_status"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:visibility="invisible"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>