<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/bg_green">


    <TextView
        android:id="@+id/caption_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/caption_txt"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/reg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caption_reg"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/txt_name"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"/>

    <EditText
        android:id="@+id/reg_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/reg_name"
        android:inputType="text"/>

    <TextView
        android:id="@+id/reg_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_et_name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/txt_dob"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"/>

    <EditText
        android:id="@+id/reg_et_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:editable="false"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/reg_dob"/>

    <TextView
        android:id="@+id/reg_hname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_et_dob"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/txt_house_name"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"/>

    <EditText
        android:id="@+id/reg_et_hname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/reg_hname"
        android:inputType="text"/>

    <TextView
        android:id="@+id/reg_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_et_hname"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/txt_place"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"/>

    <EditText
        android:id="@+id/reg_et_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/reg_place"
        android:inputType="text"/>

    <TextView
        android:id="@+id/reg_pincode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_et_place"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/txt_pincode"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"/>

    <EditText
        android:id="@+id/reg_et_pincode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/reg_pincode"
        android:inputType="number"
        android:maxLength="6"/>

    <Button
        android:id="@+id/btn_comm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_et_pincode"
        android:text="@string/txt_next"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txt_login_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_comm"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_already_memb"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>