<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HomeActivity">

        <ImageView
            android:id="@+id/img_user_header"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@drawable/home_user_shape"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_welcome"
            android:textSize="28sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/img_user_header"
            app:layout_constraintLeft_toLeftOf="@id/img_user_header"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/txt_uname_prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome"
            app:layout_constraintLeft_toLeftOf="@id/img_user_header"
            android:text=""
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/txt_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_complete_profile"
            app:layout_constraintTop_toBottomOf="@id/txt_uname_prof"
            app:layout_constraintLeft_toLeftOf="@id/img_user_header"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/txt_test_req"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_requests"
            app:layout_constraintTop_toBottomOf="@id/img_user_header"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="30dp"/>

        <ImageView
            android:id="@+id/img_book_test"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:layout_constraintTop_toBottomOf="@id/txt_test_req"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/home_book_test_shape"/>

        <TextView
            android:id="@+id/txt_caption_book_test"
            android:layout_width="248dp"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:text="@string/book_test_txt"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/img_book_test"
            app:layout_constraintTop_toTopOf="@id/img_book_test" />

        <Button
            android:id="@+id/btn_booktr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_book_tests"
            app:layout_constraintTop_toTopOf="@id/img_book_test"
            app:layout_constraintRight_toRightOf="@id/img_book_test"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="20dp"
            android:background="#03A9F4"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/img_view_tr"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:layout_constraintTop_toBottomOf="@id/img_book_test"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/home_book_test_shape"/>

        <TextView
            android:id="@+id/txt_caption_view_tr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/img_view_tr"
            app:layout_constraintTop_toTopOf="@id/img_view_tr"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:text="@string/view_prev_tr"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/btn_viewtr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_view"
            app:layout_constraintTop_toTopOf="@id/img_view_tr"
            app:layout_constraintRight_toRightOf="@id/img_view_tr"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="20dp"
            android:background="#03A9F4"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_tests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TEST RESULTS"
            app:layout_constraintTop_toBottomOf="@id/img_view_tr"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="30dp"/>

        <ImageView
            android:id="@+id/img_view_tests"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:layout_constraintTop_toBottomOf="@id/txt_tests"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/home_tests"/>

        <TextView
            android:id="@+id/txt_caption_view_tests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/img_view_tests"
            app:layout_constraintTop_toTopOf="@id/img_view_tests"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:text="you can view the test \nresults here"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/btn_viewtestres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_view"
            app:layout_constraintTop_toTopOf="@id/img_view_tests"
            app:layout_constraintRight_toRightOf="@id/img_view_tests"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="20dp"
            android:background="#3F51B5"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>