<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyActivity"
    android:background="@color/bg_green">

    <TextView
        android:id="@+id/caption_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_verify"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txt_mob_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caption_verify"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/veri_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_mob_num"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/txt_otp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/veri_et_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/veri_otp"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/veri_et_otp"
        android:layout_marginTop="20dp"
        android:text="@string/verify"
        android:textColor="@android:color/white"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/button_shape"/>

</androidx.constraintlayout.widget.ConstraintLayout>